--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Hello.</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='/favicons/default.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/bundle.css'>
 
